styling changes to login form to prevent page structure from breaking and footer covering divs

--- a/app/assets/stylesheets/_login.sass
+++ b/app/assets/stylesheets/_login.sass
@@ -3,8 +3,6 @@
 
 .login
   padding: 3rem 1rem
-  width: calc(100% - 2.5rem)
-  height: calc(100% - 280px)
 
   .alert-bkg
     margin-left: -1rem
@@ -16,12 +14,13 @@
     padding: .75rem
 
   #login-form, #password-forgot
-    padding: 1rem
+    padding: 2rem 1rem
     border-left: 10px solid $color-white
     border-radius: $global-radius
-    width: 45.5%
-    height: 200px
-    float: left
+    width: 40%
+    display: inline-block
+    vertical-align: top
+    box-sizing: border-box
 
     input.button, input.input
       width: 10rem
@@ -30,6 +29,7 @@
 
   #login-form
     background-color: lighten($color-green-2, 10%)
+    padding-bottom: 4rem
 
   #password-forgot
     margin-left: 1rem
@@ -37,29 +37,25 @@
 
 @media (max-width: $media-medium-max)
   .login
-    padding: 1rem 0
-  #login-form, #password-forgot
-    position: relative
-    width: 100% !important
-    clear: both
-    height: auto !important
-    border-radius: 0 !important
-    padding-top: .5rem
-    padding-bottom: 3rem
-    border-bottom: 1px solid $color-white
-    margin: 0 !important
-    input
-      width: 90%
-      clear: both
-      margin-bottom: .5rem
+    padding: 3rem
 
-    .small, p
-      width: 80%
+    #login-form, #password-forgot
+      width: 100%
+      display: block
+      border-radius: 0 !important
+      margin: 0 auto
+      border: 0
+      input
+        width: 80%
+        margin-bottom: .5rem
+      input.button
+        display: block
 
-  #password-forgot
-    padding: 1rem
-    margin-left: 0
-    border: 0
+    #password-forgot
+      margin: 1rem auto
+
+    #login-form
+      padding: 2rem 1rem
 
 @media (max-width: $media-small-max)
   .login
