--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -397,6 +397,9 @@ ul.subnav.logged-out
 
 .noscroll
   overflow: hidden
+  height: 100%
+  width: 100%
+  position: fixed
 
 .course-info-btn
   text-decoration: none
